--- a/package.json
+++ b/package.json
@@ -7,25 +7,26 @@
     ],
     "nohoist": [
       "**/mocha",
-      "**/@nomiclabs/*",
-      "**/*buidler*",
-      "**/solidity-coverage",
       "**/ts-node",
       "**/typescript",
       "**/eslint*",
       "**/@typescript-eslint/*",
-      "**/@graphprotocol/*"
+      "**/jest*",
+      "**/@babel/*",
+      "**/babel*"
     ]
   },
   "scripts": {
     "build": "run-s build:*",
-    "build:dev-frontend": "yarn workspace @liquity/dev-frontend build",
+    "build:frontend": "yarn workspace @liquity/frontend build",
+    "build:backend": "yarn workspace liq build:contract",
+    "deploy": "yarn workspace liq deploy:contract",
     "prepare": "run-s prepare:*",
     "prepare:decimal": "yarn workspace @liquity/decimal prepare",
     "prepare:lib-base": "yarn workspace @liquity/lib-base prepare",
     "prepare:lib-near": "yarn workspace @liquity/lib-near prepare",
     "rebuild": "run-s prepare build",
-    "start-dev-frontend": "yarn workspace @liquity/dev-frontend start"
+    "start-frontend": "yarn workspace @liquity/frontend start"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
